--- a/.github/workflows/build_image_update_lambda.yaml
+++ b/.github/workflows/build_image_update_lambda.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Create image URL
         id: image_url
         run: |
-          echo "ecr_repository_url=${{ secrets.AWS_ECR_REGISTRY_URL }}/$ECR_IMAGE_NAME" >> "$GITHUB_ENV"
+          echo "ecr_repository_url=${{ secrets.AWS_ECR_REGISTRY_URL }}/${{ vars.ECR_IMAGE_NAME }}" >> "$GITHUB_ENV"
           echo ${{ env.ecr_repository_url }}
 
       - name: Configure AWS credentials
@@ -31,9 +31,13 @@ jobs:
         id: login-ecr
 
       - name: Build and push Docker image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: docker_nodejs_demo
+          IMAGE_TAG: nodejs_demo_image
         run: |
-          docker build -t $ECR_IMAGE_NAME .
-          docker tag $ECR_IMAGE_NAME:latest ${{ env.ecr_repository_url }}:${{ github.sha }}
+          docker build -t ${{ vars.ECR_IMAGE_NAME }} .
+          docker tag ${{ vars.ECR_IMAGE_NAME }}:latest ${{ env.ecr_repository_url }}:${{ github.sha }}
           docker push ${{ env.ecr_repository_url }}:${{ github.sha }}
 
       - name: Update Lambda function
@@ -42,5 +46,5 @@ jobs:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_region: ${{ secrets.AWS_REGION }}
-          function_name: ${{ env.LAMBDA_FUNCTION_NAME }}
+          function_name: ${{ vars.LAMBDA_FUNCTION_NAME }}
           image_uri: ${{ env.ecr_repository_url }}:${{ github.sha }}
