--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,9 @@
     "jupyter.themeMatplotlibPlots": true,
     "[python]": {
         "editor.formatOnSave": true
+    },
+    "yaml.schemas": {
+        "file:///Users/tmwalter98/.vscode/extensions/docsmsft.docs-yaml-1.0.5/dist/toc.schema.json": "/toc\\.yml/i",
+        "https://raw.githubusercontent.com/awslabs/goformation/master/schema/cloudformation.schema.json": "file:///Users/tmwalter98/Developer/sms-backup-restore/template.yaml"
     }
 }
