--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ boto3 = "^1.28.9"
 boto3-stubs = {extras = ["dynamodb", "s3"], version = "^1.36.10"}
 pydantic = "^2.0.3"
 pydantic-extra-types = "^2.0.0"
-aws-lambda-powertools = {extras = ["all"], version = "^3.5.0"}
+aws-lambda-powertools = "^3.9.0"
 lxml = "^4.9.3"
 phonenumbers = "^8.13.17"
 minio = "^7.2.0"
@@ -48,6 +48,13 @@ moto = {extras = ["dynamodb", "s3"], version = "^5.0.27"}
 [tool.poetry.group.deploy.dependencies]
 aws-cdk-lib = "^2.177.0"
 constructs = "^10.4.2"
+
+
+[tool.poetry.group.drive.dependencies]
+google-api-python-client = "^2.165.0"
+oauth2client = "^4.1.3"
+google-auth-oauthlib = "^1.2.1"
+google-auth-httplib2 = "^0.2.0"
 
 [build-system]
 requires = ["poetry-core"]
